Canvas covers page. resolves #32

--- a/static/main.css
+++ b/static/main.css
@@ -7,4 +7,5 @@ body{
 }
 canvas{
     background-color: #efefef;
+    position: fixed;
 }
